# SmartDash

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/auth/: auth_handler.py
backend/app/core/: settings.py
backend/app/core/models/: crud.py  database.py
backend/app/core/schemas/: archive_data.py  devices.py  elements.py  response.py  triggers.py  users.py  virtual_pins.py
backend/app/core/utils/: error_messages.py  helpers.py  validators.py
backend/app/core/workers/: tasks.py
backend/app/routers/: archive_data.py  dashboard.py  devices.py  elements.py  signup.py  token.py  triggers.py  users.py  virtual_pins.py  websocket.py
frontend/: .env  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.js  App.jsx  index.css  main.jsx  theme.js  theme.jsx
frontend/src/components/: AddList.js  AddList.jsx  AreaChart.js  AuthModal.jsx  BarChart.js  ButtonSettingsDialogContent.jsx  ChartSettingsDialogContent.jsx  Content.js  DataTable.jsx  DragDrop.js  DragDrop.jsx  HeaderInfo.jsx  LineChart.js  LineChart.jsx  Notification.jsx  PrivateRoutes.js  PrivateRoutes.jsx  ScatterChart.js  Tabs.jsx  TopBar.js  TopBar.jsx  VirtualPinItem.jsx  Widget.js  Widget.jsx
frontend/src/functions/: customConverter.jsx  mathFunctions.jsx
frontend/src/hooks/: useDeviceData.js  useDeviceData.jsx  useDevicesData.js  useDevicesData.jsx  useUsedPinsData.jsx  useWebSocket.jsx
frontend/src/providers/: WebSocketProvider.jsx
(+63 files in other folders)
