[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Crapteep"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
motor = "^3.2.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
python-decouple = "^3.8"
async-lru = "^2.0.4"
bcrypt = "^4.0.1"
websockets = "^10.4"
python-dotenv = "^1.0.0"
fastapi = "^0.114.0"
pydantic = {extras = ["email"], version = "^2.9.1"}
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
